Creates an h3 heading

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
     <h1>Group 6 is the best Group</h1>
     <h2>Need help! Better Call Saul</h2>
+    <h3>Testing HTML<h3>
 </body>
 </html>
