--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+/*this code will also me merged into the main index.html in the main branch*/
+/*Note, when you get here --> "<link rel="stylesheet"href="css/style_option_of_your_choice.css"/>" replace it with either "<link rel="stylesheet"href="css/style_option1.css"/>" or "<link rel="stylesheet"href="css/style_option2.css"/>" */
+/*PLEASE TEST BOTH(not at the same time, but one after each test) TO SEE WHICH ONE YOU LIKE AND SHARE YOUR THOUGHT IN THE DISCORD[https://discord.com/invite/EEeTzfTR]*/
+<!Doctype html>
+<html>
 <head>
-    <title>Group 6</title>
+<title>Welcome To Group 6</title>
+<link rel="stylesheet"href="css/style_option_of_your_choice.css"/>
 </head>
 <body>
-    <h1>Group 6 is the best Group</h1>
-    <h2>Need help! Better Call Saul</h2>
-    <h3>Testing HTML<h3>
+<h1>Official Group 6 Website</h1>
+<a href="Benjamin.html" class="button button1"> Benjamin</a>
+<a href="Zahra.html" class="button button1"> Zahra</a>
+<a href="Joe.html" class="button button1"> Joe</a>
+<a href="Iverson.html" class="button button1"> Iverson</a>
+<hr />
+<p>Check out our collaborators above.</p>
 </body>
 </html>
