--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 /*this code will also me merged into the main index.html in the main branch*/
-/*Note, when you get here --> "<link rel="stylesheet"href="css/style_option_of_your_choice.css"/>" replace it with either "<link rel="stylesheet"href="css/style_option1.css"/>" or "<link rel="stylesheet"href="css/style_option2.css"/>" */
+/*Note, clone the review_files in the Master branch to get all the .css files. Then, when you get here --> "<link rel="stylesheet"href="css/style_option_of_your_choice.css"/>" replace it with either "<link rel="stylesheet"href="css/style_option1.css"/>" or "<link rel="stylesheet"href="css/style_option2.css"/>" */
 /*PLEASE TEST BOTH(not at the same time, but one after each test) TO SEE WHICH ONE YOU LIKE AND SHARE YOUR THOUGHT IN THE DISCORD[https://discord.com/invite/EEeTzfTR]*/
 <!Doctype html>
 <html>
