Benjamin's final html file and CSS file

--- a/Benjamin.html
+++ b/Benjamin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>CMP464 Project</title>
-    <link rel="stylesheet"href="css/style_option1.css"/>
+    <link rel="stylesheet"href="Benjamin_style.css"/>
 </head>
 <body>
     <h1>Welcome To My Page!
@@ -29,10 +29,6 @@
         <tr>
             <td>Python</td>
             <td>4</td>
-          </tr>
-          <tr>
-            <td>C++</td>
-            <td>3</td>
           </tr>
           <tr>
             <td>C++</td>
