--- a/Zahra.html
+++ b/Zahra.html
@@ -21,30 +21,30 @@
         At the moment, I'm mostly interested in learning new things such as web-development, data analyst and networks. But, besides my school life, Some of my hobbies include reading, hiking, photography, and cooking. Some things I want to do more of are traveling, adventours activities such as rock climbing, bungee jumping and zip lining.
        </p>
        <center> 
-        <table border="10" cellpading = "10" cellspacing ="0" width="100", height="300">
-          <tr>
-            <th>Languages/Frameworks I know/learning</th>
-            <th>Langauges/Frameworks I want to learn</th>
+        <table class="table_Zahra" border="10" cellpading = "10" cellspacing ="0" width="100", height="300">
+          <tr class="table_Zahra">
+            <th class="table_Zahra">Languages/Frameworks I know/learning</th>
+            <th class="table_Zahra">Langauges/Frameworks I want to learn</th>
           </tr>
-          <tr>
-            <td>Java </td>
-            <td>React</td>
+          <tr class="table_Zahra">
+            <td class="table_Zahra">Java </td>
+            <td class="table_Zahra">React</td>
           </tr>
-          <tr>
-            <td>Python</td>
-            <td>Bootstrap</td>
+          <tr class="table_Zahra">
+            <td class="table_Zahra">Python</td>
+            <td class="table_Zahra">Bootstrap</td>
           </tr>
-          <tr>
-            <td>HTML </td>
-            <td>CSS </td>
+          <tr class="table_Zahra">
+            <td class="table_Zahra">HTML </td>
+            <td class="table_Zahra">CSS </td>
           </tr>
-          <tr>
-            <td>SwiftUI </td>
-            <td>Javascript </td>
+          <tr class="table_Zahra">
+            <td class="table_Zahra">SwiftUI </td>
+            <td class="table_Zahra">Javascript </td>
           </tr>
-          <tr>
-            <td>Eclipse Modeling Framework </td>
-            <td>More of C++ </td>
+          <tr class="table_Zahra">
+            <td class="table_Zahra">Eclipse Modeling Framework </td>
+            <td class="table_Zahra">More of C++ </td>
           </tr>
         </table>
        </center>
