--- a/Zahra.html
+++ b/Zahra.html
@@ -3,7 +3,7 @@
   <head>
      <meta charset= "utf-8">
      <meta name = "viewport" content=width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
-     <link rel="stylesheet" type="text/css" href="style_Zahra.css">
+     <link rel="stylesheet" type="text/css" href="style_option1.css">
      <title> Zahra Khan </title>
 
   </head>
