--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-/*this code will also me merged into the main index.html in the main branch*/
-/*Note, clone the review_files in the Master branch to get all the .css files. Although in the master branch, there is a review_index.html which is the same as this.
-Then, when you get here --> "<link rel="stylesheet"href="css/style_option_of_your_choice.css"/>" 
-replace it with either "<link rel="stylesheet"href="css/style_option1.css"/>" or "<link rel="stylesheet"href="css/style_option2.css"/>" */
-/*PLEASE TEST BOTH(not at the same time, but one after each test) TO SEE WHICH ONE YOU LIKE AND SHARE YOUR THOUGHT IN THE DISCORD[https://discord.com/invite/EEeTzfTR]*/
 <!Doctype html>
 <html>
 <head>
 <title>Welcome To Group 6</title>
-<link rel="stylesheet"href="css/style_option_of_your_choice.css"/>
+<link rel="stylesheet"href="style_option1.css"/>
 </head>
 <body>
 <h1>Official Group 6 Website</h1>
@@ -15,6 +10,7 @@ replace it with either "<link rel="stylesheet"href="css/style_option1.css"/>" or
 <a href="Zahra.html" class="button button1"> Zahra</a>
 <a href="Joe.html" class="button button1"> Joe</a>
 <a href="Iverson.html" class="button button1"> Iverson</a>
+<a href="Fajer.html" class="button button1">Fajer</a>
 <hr />
 <p>Check out our collaborators above.</p>
 </body>
