--- a/Joe.html
+++ b/Joe.html
@@ -16,7 +16,12 @@
 </div>
 
 <div class="Joe_div1"> 
-  <Joe_p1>Hey all, Joe here, I just want to start by saying that this is the begining of something incredible, i truely believe that. Hopefully you feel the same way too. I'm a CS major, this is my second semester at Lehman, I hope to level up in CSS, JavaScript and HTML. It won't be an easy one, I don't expect it to(seriously, it took me three days to create this abomination you're seeing right now), but i'm determined to do what is required of me. I like front-end development so far and eager to see how far i can go with this. Also, back-end developments is still yet to come and i'm eager to get started with that too. Hope to learn more with you guys, big shout outs to my crew in group 6.</Joe_p1> 
+  <Joe_p1>Hey all, Joe here, I just want to start by saying that this is the begining of something incredible, i truely believe that. 
+    Hopefully you feel the same way too. I'm a CS major, this is my second semester at Lehman, I hope to level up in CSS, JavaScript and HTML.
+    It won't be an easy one, I don't expect it to(seriously, it took me three days to create this abomination you're seeing right now), 
+    but i'm determined to do what is required of me. I like front-end development so far and eager to see how far i can go with this. Also,
+    back-end developments is still yet to come and i'm eager to get started with that too. Hope to learn more with you guys,
+    big shout outs to my crew in group 6.</Joe_p1> 
 </div>
 
 <div class="Joe_content" >
