--- a/Joe.html
+++ b/Joe.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Joe Debrah</title>
-<link rel="stylesheet" href="style_option1.css"/>
+<link rel="stylesheet" href="stylecss"/>
 </head>
 <body>
   
