I centered the elements that would link to the personal html files.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 </head>
 <body>
 <h1>Official Group 6 Website</h1>
-<a href="Benjamin.html" class="button button1"> Benjamin</a>
-<a href="Zahra.html" class="button button1"> Zahra</a>
-<a href="Joe.html" class="button button1"> Joe</a>
-<a href="Iverson.html" class="button button1"> Iverson</a>
-<a href="Fajer.html" class="button button1">Fajer</a>
+<div class="center">
+    <a href="Benjamin.html" class="button button1"> Benjamin</a>
+    <a href="Zahra.html" class="button button1"> Zahra</a>
+    <a href="Joe.html" class="button button1"> Joe</a>
+    <a href="Iverson.html" class="button button1"> Iverson</a>
+    <a href="Fajer.html" class="button button1">Fajer</a>
+</div>
 <hr />
 <p>Check out our collaborators above.</p>
 </body>
