Now change all of the style_option1.css to style.css

--- a/Iverson.html
+++ b/Iverson.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Iverson Mejia Resume</title>
-    <link rel="stylesheet" href="css/style_option1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Official Group 6 Website</h1>
@@ -13,7 +13,7 @@
             finding checkmate in 3, these types of games have always 
             been my fascination. The more I have to struggle through 
             a challenge, having to dwell on what the could the answer
-            be is when I had the most fun. So when I discovered programming
+            be, is when I had the most fun. So when I discovered programming
             for the first time it felt like a perfect match. Even though 
             my programming journey is relatively young here are some 
             of the things I have been working with.  
