Changed to style.css in the index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Welcome To Group 6</title>
-<link rel="stylesheet"href="style_option1.css"/>
+<link rel="stylesheet"href="style.css"/>
 </head>
 <body>
 <h1>Official Group 6 Website</h1>
